# resumeminer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  workflow.yml
resumeminer/: __init__.py  cli.py  parser.py
resumeminer/data/: skills.txt
resumeminer/extractors/: __init__.py  pdf.py
resumeminer/parsers/: __init__.py  contact.py  links.py  skills.py
tests/: conftest.py  test_cli.py  test_contact.py  test_extractors.py  test_links.py  test_parser.py  test_real_resume_fixtures.py  test_skills.py
tests/fixtures/: README.md
