[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "resumeminer"
version = "0.1.0"
description = "A lightweight Python library for extracting structured information from PDF resumes"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
authors = [
    { name = "H. Ali", email = "haxratali0@gmail.com" },
]
keywords = ["resume", "parser", "pdf", "cv", "recruitment"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
]
dependencies = [
    "pypdf>=4.0,<6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "build>=1.0",
    "twine>=5.0",
]

[project.scripts]
resumeminer = "resumeminer.cli:main"

[project.urls]
Homepage = "https://github.com/alixaprodev/resumeminer"
Repository = "https://github.com/alixaprodev/resumeminer"
Issues = "https://github.com/alixaprodev/resumeminer/issues"
Documentation = "https://github.com/alixaprodev/resumeminer#readme"

[tool.hatch.build.targets.wheel]
packages = ["resumeminer"]

[tool.hatch.build.targets.sdist]
include = [
    "/resumeminer",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
